--- a/styleguide/.detoxrc.json
+++ b/styleguide/.detoxrc.json
@@ -12,8 +12,7 @@
     },
     "android": {
       "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-      "testBinaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-      "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release --stacktrace && cd ..",
+      "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
       "type": "android.emulator",
       "device": {
         "avdName": "Pixel_2_API_28"
