--- a/styleguide/android/build.gradle
+++ b/styleguide/android/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        minSdkVersion = 18
         compileSdkVersion = 29
         targetSdkVersion = 29
+        kotlinVersion = '1.4.21'
     }
     repositories {
         google()
@@ -15,6 +16,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:3.5.3")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -31,6 +33,10 @@ allprojects {
         }
 
         google()
+        maven {
+            // All of Detox' artifacts are provided via the npm module
+            url "$rootDir/../../node_modules/detox/Detox-android"
+        }
         jcenter()
         maven { url 'https://www.jitpack.io' }
     }
