ci(e2e/Detox): Implement detox ios for cli and add android (#460)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly",
-    "x": true
+    "x": "readonly"
   },
   "parser": "babel-eslint",
   "parserOptions": {
