--- a/packages/startupjs/templates/ui/.eslintrc.json
+++ b/packages/startupjs/templates/ui/.eslintrc.json
@@ -4,16 +4,21 @@
     "browser": true,
     "es6": true,
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "detox/detox": true,
+    "jest": true,
+    "jest/globals": true
   },
   "extends": [
     "standard",
     "standard-react",
-    "plugin:react-pug/all"
+    "plugin:react-pug/all",
+    "plugin:jest/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "x": "readonly"
   },
   "parser": "babel-eslint",
   "parserOptions": {
@@ -27,6 +32,8 @@
   "plugins": [
     "react",
     "react-pug",
+    "jest",
+    "detox",
     "eslint-plugin-import-helpers"
   ],
   "rules": {
@@ -37,6 +44,7 @@
     "react-pug/no-interpolation": "off",
     "react-pug/prop-types": "off",
     "react-pug/quotes": "off",
+    "jest/expect-expect": "off",
     "import-helpers/order-imports": [
       "warn",
         { 
@@ -45,7 +53,7 @@
             "/^react$/",
             "/react-native/",
             "/^react.*/",
-            "/^startupjs/",
+            "/^startupjs/", 
             "/^@?startupjs.*/",
             "/^@?dmapper.*/",
             "module",
